--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
 <section id="title-slide" class="quarto-title-block center">
   <h1 class="title">Final Update Antipsychotics Project</h1>
-  <p class="subtitle">- aren’t you glad</p>
+  <p class="subtitle">I´m so glad 😂👏</p>
 
 <div class="quarto-title-authors">
 </div>
