--- a/index.html
+++ b/index.html
@@ -513,9 +513,9 @@
 </section>
 <section id="acknowledgements" class="slide level2">
 <h2>Acknowledgements</h2>
-<p>Stéphanie, Anne-Kristin, You all!, NORMENT, Patients enrolled in the TOP Cohort</p>
+<p>Stéphanie, Anne-Kristin, You all!, Have a great summer!</p>
 
-<img data-src="img/Martens_web2022final.png" class="quarto-figure quarto-figure-center r-stretch"></section>
+<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"></section>
 <section class="slide level2">
 
 <div class="quarto-auto-generated-content">
