--- a/index.html
+++ b/index.html
@@ -362,6 +362,16 @@
 </div>
 </div>
 </section>
+<section id="differentially-methylated-regions" class="slide level2">
+<h2>Differentially Methylated Regions</h2>
+<div class="columns">
+<div class="column" style="width:70%;">
+<p><img data-src="img/CommonEffectsDMRsb.png"></p>
+</div><div class="column" style="width:30%;">
+<p><br> Common Effects <br><br> Meta-analysis EWAS results <br><br> n = 136</p>
+</div>
+</div>
+</section>
 <section id="section" class="slide level2">
 <h2></h2>
 <div class="quarto-auto-generated-content">
