--- a/index.html
+++ b/index.html
@@ -362,13 +362,20 @@
 </div>
 </div>
 </section>
-<section id="differentially-methylated-regions" class="slide level2">
-<h2>Differentially Methylated Regions</h2>
+<section id="results" class="slide level2">
+<h2>Results</h2>
+<ul>
+<li class="fragment">Differentially methylated region analysis (DMRs)</li>
+<li class="fragment">Database investigation of DMR-annotated genes</li>
+</ul>
+</section>
+<section id="common-effects-analysis-n136" class="slide level2 smaller">
+<h2>Common Effects Analysis n=136</h2>
 <div class="columns">
 <div class="column" style="width:70%;">
 <p><img data-src="img/CommonEffectsDMRsb.png"></p>
 </div><div class="column" style="width:30%;">
-<p><br> Common Effects <br><br> Meta-analysis EWAS results <br><br> n = 136</p>
+<p><br> Meta-analysis EWAS results<br> <br> 22 DMRs FDR &lt; 0.05 <br><br> 16 DMRs FDR &lt; 0.01 <br><br></p>
 </div>
 </div>
 </section>
