--- a/index.html
+++ b/index.html
@@ -362,11 +362,13 @@
 </div>
 </div>
 </section>
-<section id="results" class="slide level2">
-<h2>Results</h2>
+<section id="methods" class="slide level2">
+<h2>Methods</h2>
 <ul>
-<li class="fragment">Differentially methylated region analysis (DMRs)</li>
-<li class="fragment">Database investigation of DMR-annotated genes</li>
+<li class="fragment"><p>Common Model: 𝛽 ~ AP-serum + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
+<li class="fragment"><p>Specific Model: 𝛽 ~ AP vs (Other AP + MF) + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
+<li class="fragment"><p>Differentially methylated region analysis (DMRs) <strong>dmrff</strong></p></li>
+<li class="fragment"><p>Database investigation of DMR-annotated genes e.g.&nbsp;SynGO, GeneTrail 3.2, EpiFactors 2022</p></li>
 </ul>
 </section>
 <section id="common-effects-analysis-n136" class="slide level2 smaller">
@@ -379,8 +381,23 @@
 </div>
 </div>
 </section>
-<section id="section" class="slide level2">
-<h2></h2>
+<section id="specific-effects-analysis-n263" class="slide level2 smaller">
+<h2>Specific Effects Analysis n=263</h2>
+
+<img data-src="img/SpecificDMRs.png" class="r-stretch"></section>
+<section id="database-search-of-dmr-genes" class="slide level2">
+<h2>Database search of DMR genes</h2>
+<ul>
+<li class="fragment">SynGO: Synaptic</li>
+</ul>
+</section>
+<section id="epifactors-2022" class="slide level2">
+<h2>EpiFactors 2022</h2>
+<p>Dysregulation of epigenetic processes has been demonstrated in SCZ - not only in clinical studies, but also in animal models, cell lines, and postmortem brain studies. Not only DNAm. Epigenetic regulation is imiportant, particularly during brain development (pre- and postnatally). Epigenetic modifications are aslo involved in maintenance of sex differences in the brain (99) which may explain differences in susceptibility, onset, pathogenesis, and severity of SCZ between males and females (100).</p>
+</section>
+<section id="txt-response" class="slide level2">
+<h2>TXT response</h2>
+<p>Epigenetic modifications that are associated with txt may also act as predictors of txt response. (Hannon 2016)!</p>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
