--- a/index.html
+++ b/index.html
@@ -335,18 +335,29 @@
 <section id="differentially-methylated-regions-associated-with-antipsychotic-treatment-martens-summer-seminar-june-17-2024" class="slide level2" data-background-color="black" data-background-image="img/summerFlowers.jpg" data-background-size="cover" data-background-opacity="0.7">
 <h2>Differentially Methylated Regions <br> associated with antipsychotic treatment <br> <br> <br> <br> <br> Martens Summer Seminar <br> June 17, 2024</h2>
 </section>
-<section id="looking-back" class="slide level2">
-<h2>Looking back <br></h2>
+<section id="aim-identification-of-treatment-effects" class="slide level2">
+<h2>Aim: identification of treatment effects <br></h2>
 <ul>
-<li class="fragment">Focus on response, rather than cross-sectional methylation status</li>
-<li class="fragment">Real-world studies are also challenging</li>
+<li class="fragment">Olanzapine, quetiapine, risperidone</li>
+<li class="fragment">Epigenetic modifications associated with treatment may also act as predictors of treatment response. (Hannon 2016)!</li>
 <li class="fragment">Median study duration 6 weeks, maximum 13 weeks (PMID:37159349)</li>
-<li class="fragment">Treatment discontinuation rate (TDR) lower for monotherapy vs polypharmacy</li>
 <li class="fragment">Risperidone highest TDR and shortest Time to discontinuation (TTD) (PMID: 35770081)</li>
 </ul>
 <div class="footer">
 <p>Leucht et al.(2013) <strong>World Psychiatry</strong>; Zhang et al.(2022) <strong>Frontiers in Pharmacology</strong>, 2022</p>
 </div>
+</section>
+<section id="dysregulation-of-epigenetic-processes" class="slide level2">
+<h2>Dysregulation of epigenetic processes</h2>
+
+<img data-src="img/Smigielski.png" class="r-stretch"></section>
+<section id="section" class="slide level2">
+<h2></h2>
+<p>Dysregulation of epigenetic processes has been demonstrated in SCZ - not only in clinical studies, but also in animal models, cell lines, and postmortem brain studies. Not only DNAm. Epigenetic regulation is important, particularly during brain development (pre- and postnatally). Epigenetic modifications are aslo involved in maintenance of sex differences in the brain (99) which may explain differences in susceptibility, onset, pathogenesis, and severity of SCZ between males and females (100).</p>
+</section>
+<section id="txt-response" class="slide level2">
+<h2>TXT response</h2>
+<p>Epigenetic modifications that are associated with txt may also act as predictors of txt response. (Hannon 2016)!</p>
 </section>
 <section id="sample-selection" class="slide level2 smaller">
 <h2>Sample Selection</h2>
@@ -381,8 +392,8 @@
 </div>
 </div>
 </section>
-<section id="specific-effects-analysis-n263" class="slide level2 smaller">
-<h2>Specific Effects Analysis n=263</h2>
+<section id="specific-effects-analysis-n263" class="slide level2">
+<h2>Specific Effects Analysis n=263 <br><br></h2>
 
 <img data-src="img/SpecificDMRs.png" class="r-stretch"></section>
 <section id="database-search-of-dmr-genes" class="slide level2">
@@ -393,11 +404,6 @@
 </section>
 <section id="epifactors-2022" class="slide level2">
 <h2>EpiFactors 2022</h2>
-<p>Dysregulation of epigenetic processes has been demonstrated in SCZ - not only in clinical studies, but also in animal models, cell lines, and postmortem brain studies. Not only DNAm. Epigenetic regulation is imiportant, particularly during brain development (pre- and postnatally). Epigenetic modifications are aslo involved in maintenance of sex differences in the brain (99) which may explain differences in susceptibility, onset, pathogenesis, and severity of SCZ between males and females (100).</p>
-</section>
-<section id="txt-response" class="slide level2">
-<h2>TXT response</h2>
-<p>Epigenetic modifications that are associated with txt may also act as predictors of txt response. (Hannon 2016)!</p>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
