--- a/index.html
+++ b/index.html
@@ -354,10 +354,9 @@
 <section id="section" class="slide level2">
 <h2></h2>
 <p>Dysregulation of epigenetic processes has been demonstrated in SCZ - not only in clinical studies, but also in animal models, cell lines, and postmortem brain studies. Not only DNAm. Epigenetic regulation is important, particularly during brain development (pre- and postnatally). Epigenetic modifications are aslo involved in maintenance of sex differences in the brain (99) which may explain differences in susceptibility, onset, pathogenesis, and severity of SCZ between males and females (100).</p>
-</section>
-<section id="txt-response" class="slide level2">
-<h2>TXT response</h2>
-<p>Epigenetic modifications that are associated with txt may also act as predictors of txt response. (Hannon 2016)!</p>
+<div class="footer">
+<p>Martens Summer Seminar 2024</p>
+</div>
 </section>
 <section id="sample-selection" class="slide level2 smaller">
 <h2>Sample Selection</h2>
@@ -398,20 +397,34 @@
 <img data-src="img/SpecificDMRs.png" class="r-stretch"></section>
 <section id="database-investigation-of-dmr-genes" class="slide level2">
 <h2>Database investigation of DMR genes<br><br></h2>
-<p>Over-representation analysis</p>
 
-<img data-src="img/GeneTrail3.2.png" class="r-stretch"></section>
+<img data-src="img/GeneTrail3.2.png" class="r-stretch"><div class="footer">
+<p>Martens Summer Seminar 2024</p>
+</div>
+</section>
 <section id="database-investigation-of-dmr-genes-1" class="slide level2">
 <h2>Database investigation of DMR genes <br><br></h2>
-<p>Synaptic gene ontology</p>
 
-<img data-src="img/SynGO.png" class="r-stretch"></section>
+<img data-src="img/SynGO.png" class="r-stretch"><div class="footer">
+<p>Martens Summer Seminar 2024</p>
+</div>
+</section>
 <section id="database-investigation-of-dmr-genes-2" class="slide level2">
 <h2>Database investigation of DMR genes <br><br></h2>
-<p>For epigenetic factors - methylation, acetylation</p>
 
-<img data-src="img/EpiFactors.png" class="r-stretch"></section>
+<img data-src="img/EpiFactors.png" class="r-stretch"><div class="footer">
+<p>Martens Summer Seminar 2024</p>
+</div>
+</section>
+<section id="results-epifactors-2022" class="slide level2">
+<h2>Results EpiFactors 2022</h2>
+<p>Genes associated with chromatin compaction/gene silencing</p>
+
+<img data-src="img/CommonEffects_EpiFactors.png" class="r-stretch"></section>
 <section id="section-1" class="slide level2">
+<h2></h2>
+</section>
+<section id="section-2" class="slide level2">
 <h2></h2>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
