--- a/index.html
+++ b/index.html
@@ -416,16 +416,37 @@
 <p>Martens Summer Seminar 2024</p>
 </div>
 </section>
-<section id="results-epifactors-2022" class="slide level2">
-<h2>Results EpiFactors 2022</h2>
+<section id="results-common-effects" class="slide level2">
+<h2>Results: Common Effects</h2>
 <p>Genes associated with chromatin compaction/gene silencing</p>
 
-<img data-src="img/CommonEffects_EpiFactors.png" class="r-stretch"></section>
-<section id="section-1" class="slide level2">
-<h2></h2>
+<img data-src="img/CommonEffects_EpiFactors.png" class="r-stretch"><div class="footer">
+<p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
+</div>
 </section>
-<section id="section-2" class="slide level2">
-<h2></h2>
+<section id="results-specific-effects-olanzapine" class="slide level2">
+<h2>Results: Specific Effects Olanzapine</h2>
+<p>Genes associated with methyltransferases/gene silencing</p>
+
+<img data-src="img/Ola_EpiFactors.png" class="r-stretch"><div class="footer">
+<p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
+</div>
+</section>
+<section id="results-specific-effects-quetiapine" class="slide level2">
+<h2>Results: Specific Effects Quetiapine</h2>
+<p>Genes associated with</p>
+
+<img data-src="img/Que_EpiFactors.png" class="r-stretch"><div class="footer">
+<p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
+</div>
+</section>
+<section id="results-specific-effects-risperidone" class="slide level2">
+<h2>Results: Specific Effects Risperidone</h2>
+<p>Genes associated with chromatin easing/gene transcription</p>
+
+<img data-src="img/Ris_EpiFactors.png" class="r-stretch"><div class="footer">
+<p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
+</div>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
