--- a/index.html
+++ b/index.html
@@ -353,6 +353,10 @@
 <img data-src="img/Smigielski.png" class="r-stretch"></section>
 <section id="section" class="slide level2">
 <h2></h2>
+
+<img data-src="img/Smigielski.png" class="r-stretch"></section>
+<section id="section-1" class="slide level2">
+<h2></h2>
 <p>Dysregulation of epigenetic processes has been demonstrated in SCZ - not only in clinical studies, but also in animal models, cell lines, and postmortem brain studies. Not only DNAm. Epigenetic regulation is important, particularly during brain development (pre- and postnatally). Epigenetic modifications are aslo involved in maintenance of sex differences in the brain (99) which may explain differences in susceptibility, onset, pathogenesis, and severity of SCZ between males and females (100).</p>
 <div class="footer">
 <p>Martens Summer Seminar 2024</p>
@@ -446,6 +450,17 @@
 
 <img data-src="img/Ris_EpiFactors.png" class="r-stretch"><div class="footer">
 <p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
+</div>
+</section>
+<section id="discussionconclusion" class="slide level2">
+<h2>Discussion/Conclusion</h2>
+<ul>
+<li class="fragment">Real world studies also challenging</li>
+<li class="fragment">Median study duration 6 weeks, maximum 13 weeks (PMID:37159349)</li>
+<li class="fragment"></li>
+</ul>
+<div class="footer">
+<p>Leucht et al.(2013) <strong>World Psychiatry</strong></p>
 </div>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
