--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
 <ul>
 <li class="fragment">Olanzapine, quetiapine, risperidone</li>
 <li class="fragment">Our focus - DNA methylation (CpG or DMR level)</li>
-<li class="fragment">Epigenetic dysregulation in severe mental illness has been studied in all stages of development as well as the pharma used to treat.</li>
-<li class="fragment">Effect of antipsychotic drugs on DNAm is humans, animals, and cell lines.</li>
+<li class="fragment">Epigenetic dysregulation in severe mental illness is complex</li>
+<li class="fragment">Evidence from animal models and cells lines</li>
 </ul>
 <div class="footer">
 <p>Martens Summer Seminar 2024</p>
@@ -357,7 +357,6 @@
 <img data-src="img/Smigielski.png" class="r-stretch"></section>
 <section id="section-1" class="slide level2">
 <h2></h2>
-<p>Dysregulation of epigenetic processes has been demonstrated in SCZ - not only in clinical studies, but also in animal models, cell lines, and postmortem brain studies. Not only DNAm. Epigenetic regulation is important, particularly during brain development (pre- and postnatally). Epigenetic modifications are aslo involved in maintenance of sex differences in the brain (99) which may explain differences in susceptibility, onset, pathogenesis, and severity of SCZ between males and females (100).</p>
 <div class="footer">
 <p>Martens Summer Seminar 2024</p>
 </div>
@@ -430,7 +429,7 @@
 </section>
 <section id="results-specific-effects-olanzapine" class="slide level2">
 <h2>Results: Specific Effects Olanzapine</h2>
-<p>Genes associated with methyltransferases/gene silencing</p>
+<p>Genes associated with transcription, DNA repair, replication</p>
 
 <img data-src="img/Ola_EpiFactors.png" class="r-stretch"><div class="footer">
 <p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
@@ -438,7 +437,7 @@
 </section>
 <section id="results-specific-effects-quetiapine" class="slide level2">
 <h2>Results: Specific Effects Quetiapine</h2>
-<p>Genes associated with</p>
+<p>Genes associated with chromatin remodeling complexes</p>
 
 <img data-src="img/Que_EpiFactors.png" class="r-stretch"><div class="footer">
 <p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
@@ -446,7 +445,7 @@
 </section>
 <section id="results-specific-effects-risperidone" class="slide level2">
 <h2>Results: Specific Effects Risperidone</h2>
-<p>Genes associated with chromatin easing/gene transcription</p>
+<p>Genes associated with transcriptionally active chromatin</p>
 
 <img data-src="img/Ris_EpiFactors.png" class="r-stretch"><div class="footer">
 <p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
