--- a/index.html
+++ b/index.html
@@ -461,6 +461,14 @@
 <div class="footer">
 <p>Leucht et al.(2013) <strong>World Psychiatry</strong></p>
 </div>
+</section>
+<section id="acknowledgements" class="slide level2">
+<h2>Acknowledgements</h2>
+<p>Stéphanie, Anne-Kristin, You all! Have a great summer!</p>
+
+<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"></section>
+<section id="section-2" class="slide level2">
+<h2></h2>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
