--- a/index.html
+++ b/index.html
@@ -340,8 +340,7 @@
 <ul>
 <li class="fragment">Olanzapine, quetiapine, risperidone</li>
 <li class="fragment">Our focus - DNA methylation (CpG or DMR level)</li>
-<li class="fragment">Epigenetic dysregulation in severe mental illness is complex</li>
-<li class="fragment">Evidence from animal models and cells lines</li>
+<li class="fragment">Characterization of epigenetic dysregulation in severe mental illness is complex</li>
 </ul>
 <div class="footer">
 <p>Martens Summer Seminar 2024</p>
@@ -350,15 +349,8 @@
 <section id="epigenetic-modificationsfactors" class="slide level2">
 <h2>Epigenetic Modifications/Factors</h2>
 
-<img data-src="img/Smigielski.png" class="r-stretch"></section>
-<section id="section" class="slide level2">
-<h2></h2>
-
-<img data-src="img/Smigielski.png" class="r-stretch"></section>
-<section id="section-1" class="slide level2">
-<h2></h2>
-<div class="footer">
-<p>Martens Summer Seminar 2024</p>
+<img data-src="img/Smigielski.png" class="r-stretch"><div class="footer">
+<p>Image credit: Smigielski, <em>et al</em>, Molecular Psychiatry, 2020</p>
 </div>
 </section>
 <section id="sample-selection" class="slide level2 smaller">
@@ -467,7 +459,7 @@
 <p>Stéphanie, Anne-Kristin, You all! Have a great summer!</p>
 
 <img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"></section>
-<section id="section-2" class="slide level2">
+<section id="section" class="slide level2">
 <h2></h2>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
