--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
 <ul>
 <li class="fragment">Olanzapine, quetiapine, risperidone</li>
 <li class="fragment">Our focus - DNA methylation (CpG or DMR level)</li>
-<li class="fragment">Characterization of epigenetic dysregulation in severe mental illness is complex</li>
+<li class="fragment">Characterization of epigenetic dysregulation in severe mental illness is complex.</li>
+<li class="fragment">Identification of pathways – and the timing - where alterations may have occurred is not fully characterized.</li>
 </ul>
 <div class="footer">
 <p>Martens Summer Seminar 2024</p>
@@ -350,7 +351,7 @@
 <h2>Epigenetic Modifications/Factors</h2>
 
 <img data-src="img/Smigielski.png" class="r-stretch"><div class="footer">
-<p>Image credit: Smigielski, <em>et al</em>, Molecular Psychiatry, 2020</p>
+<p>Image credit: Smigielski <em>et al</em>, Molecular Psychiatry, 2020</p>
 </div>
 </section>
 <section id="sample-selection" class="slide level2 smaller">
@@ -370,8 +371,8 @@
 <section id="methods" class="slide level2">
 <h2>Methods</h2>
 <ul>
-<li class="fragment"><p>Common Model: 𝛽 ~ AP-serum + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
-<li class="fragment"><p>Specific Model: 𝛽 ~ AP vs (Other AP + MF) + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
+<li class="fragment"><p>Common Effects<br> Model: 𝛽 ~ AP-serum + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
+<li class="fragment"><p>Specific Effects<br> Model: 𝛽 ~ AP vs (2 APs + MF) + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
 <li class="fragment"><p>Differentially methylated region analysis (DMRs) <strong>dmrff</strong></p></li>
 <li class="fragment"><p>Database investigation of DMR-annotated genes e.g.&nbsp;SynGO, GeneTrail 3.2, EpiFactors 2022</p></li>
 </ul>
