--- a/index.html
+++ b/index.html
@@ -368,13 +368,13 @@
 </div>
 </div>
 </section>
-<section id="methods" class="slide level2">
+<section id="methods" class="slide level2 smaller">
 <h2>Methods</h2>
 <ul>
 <li class="fragment"><p>Common Effects<br> Model: 𝛽 ~ AP-serum + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
 <li class="fragment"><p>Specific Effects<br> Model: 𝛽 ~ AP vs (2 APs + MF) + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
-<li class="fragment"><p>Differentially methylated region analysis (DMRs) <strong>dmrff</strong></p></li>
-<li class="fragment"><p>Database investigation of DMR-annotated genes e.g.&nbsp;SynGO, GeneTrail 3.2, EpiFactors 2022</p></li>
+<li class="fragment"><p>Differentially methylated region analysis (DMRs) <strong>dmrff</strong><br></p></li>
+<li class="fragment"><p>Database investigation of DMR-annotated genes e.g.&nbsp;GeneTrail 3.2, SynGO, Enrichr, EpiFactors 2022</p></li>
 </ul>
 </section>
 <section id="results-common-effects-analysis-n136" class="slide level2 smaller">
