--- a/index.html
+++ b/index.html
@@ -373,15 +373,18 @@
 <ul>
 <li class="fragment"><p>Common Effects<br> Model: 𝛽 ~ AP-serum + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
 <li class="fragment"><p>Specific Effects<br> Model: 𝛽 ~ AP vs (2 APs + MF) + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br></p></li>
-<li class="fragment"><p>Differentially methylated region analysis (DMRs) <strong>dmrff</strong><br></p></li>
-<li class="fragment"><p>Database investigation of DMR-annotated genes e.g.&nbsp;GeneTrail 3.2, SynGO, Enrichr, EpiFactors 2022</p></li>
+<li class="fragment"><p>Differentially methylated region analysis (DMRs): <em>dmrff</em> <br><br></p></li>
+<li class="fragment"><p>Database investigation of DMR-annotated genes: <br> GeneTrail 3.2, SynGO, Enrichr, EpiFactors 2022</p></li>
 </ul>
+<div class="footer">
+<p>Martens Summer Seminar 2024</p>
+</div>
 </section>
 <section id="results-common-effects-analysis-n136" class="slide level2 smaller">
 <h2>Results: Common Effects Analysis n=136</h2>
 <div class="columns">
 <div class="column" style="width:70%;">
-<p><img data-src="img/CommonEffectsDMRsb.png"></p>
+<p><img data-src="img/CommonEffectsDMRsb.png" width="600"></p>
 </div><div class="column" style="width:30%;">
 <p><br> Meta-analysis EWAS results<br> <br> 22 DMRs FDR &lt; 0.05 <br><br> 16 DMRs FDR &lt; 0.01 <br><br></p>
 </div>
@@ -447,6 +450,7 @@
 <section id="discussionconclusion" class="slide level2">
 <h2>Discussion/Conclusion</h2>
 <ul>
+<li class="fragment">Small sample sizes when selecting monotherapy</li>
 <li class="fragment">Real world studies also challenging</li>
 <li class="fragment">Median study duration 6 weeks, maximum 13 weeks (PMID:37159349)</li>
 <li class="fragment"></li>
@@ -459,10 +463,7 @@
 <h2>Acknowledgements</h2>
 <p>Stéphanie, Anne-Kristin, You all! Have a great summer!</p>
 
-<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"></section>
-<section id="section" class="slide level2">
-<h2></h2>
-<div class="quarto-auto-generated-content">
+<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"><div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
