--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@
 <h2>Discussion/Conclusion</h2>
 <ul>
 <li class="fragment">Small sample sizes when selecting monotherapy</li>
-<li class="fragment">Real world studies also challenging</li>
-<li class="fragment">Median study duration 6 weeks, maximum 13 weeks (PMID:37159349)</li>
+<li class="fragment">We identified 22 DMRs (FDR &lt; 0.05) associated with Common Effects</li>
+<li class="fragment"></li>
 <li class="fragment"></li>
 </ul>
 <div class="footer">
@@ -463,7 +463,11 @@
 <h2>Acknowledgements</h2>
 <p>Stéphanie, Anne-Kristin, You all! Have a great summer!</p>
 
-<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"><div class="quarto-auto-generated-content">
+<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"></section>
+<section id="section" class="slide level2">
+<h2></h2>
+
+<img data-src="img/KDM2B_DMR.png" class="r-stretch"><div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
