--- a/index.html
+++ b/index.html
@@ -423,6 +423,13 @@
 <p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
 </div>
 </section>
+<section id="results-plotting-kdm2b" class="slide level2">
+<h2>Results: Plotting <em>KDM2B</em></h2>
+
+<img data-src="img/KDM2B_DMR.png" class="r-stretch"><div class="footer">
+<p>Martens Summer Seminar 2024</p>
+</div>
+</section>
 <section id="results-specific-effects-olanzapine" class="slide level2">
 <h2>Results: Specific Effects Olanzapine</h2>
 <p>Genes associated with transcription, DNA repair, replication</p>
@@ -451,23 +458,19 @@
 <h2>Discussion/Conclusion</h2>
 <ul>
 <li class="fragment">Small sample sizes when selecting monotherapy</li>
-<li class="fragment">We identified 22 DMRs (FDR &lt; 0.05) associated with Common Effects</li>
-<li class="fragment"></li>
-<li class="fragment"></li>
+<li class="fragment">22 DMRs (FDR &lt; 0.05) associated with Common Effects</li>
+<li class="fragment">Significant association with epigenetic factors</li>
+<li class="fragment">Do AP mediate</li>
 </ul>
 <div class="footer">
-<p>Leucht et al.(2013) <strong>World Psychiatry</strong></p>
+
 </div>
 </section>
 <section id="acknowledgements" class="slide level2">
 <h2>Acknowledgements</h2>
 <p>Stéphanie, Anne-Kristin, You all! Have a great summer!</p>
 
-<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"></section>
-<section id="section" class="slide level2">
-<h2></h2>
-
-<img data-src="img/KDM2B_DMR.png" class="r-stretch"><div class="quarto-auto-generated-content">
+<img data-src="img/Watermelon.jpeg" class="quarto-figure quarto-figure-center r-stretch"><div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
