--- a/index.html
+++ b/index.html
@@ -423,11 +423,19 @@
 <p><a href="https://epifactors.autosome.org">EpiFactors</a></p>
 </div>
 </section>
-<section id="results-plotting-kdm2b" class="slide level2">
+<section id="results-plotting-kdm2b" class="slide level2 smaller">
 <h2>Results: Plotting <em>KDM2B</em></h2>
-
-<img data-src="img/KDM2B_DMR.png" class="r-stretch"><div class="footer">
-<p>Martens Summer Seminar 2024</p>
+<div class="columns">
+<div class="column" style="width:60%;">
+<p><img data-src="img/KDM2B_DMR.png"></p>
+</div><div class="column" style="width:40%;">
+<p><br>Represses hippocampal Wnt signalling genes (Zhang <em>et al</em>, 2023)<br><br> Crucial for neuronal development and morphogenesis <br><br></p>
+<p>Abnormal expression in SCZ &amp; BPD (Hoseth <em>et al</em>, 2018)<br><br></p>
+<p>Interacts with dopamine system, glutamate signaling, &amp; neuroinflamation (Vallée, 2022).</p>
+</div>
+</div>
+<div class="footer">
+<p>Zhang (2023) Nature Communications</p>
 </div>
 </section>
 <section id="results-specific-effects-olanzapine" class="slide level2">
