--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 </div>
 </div>
 <div class="footer">
-<p>Zhang (2023) Nature Communications</p>
+<p>Martins Summer Seminar 2024</p>
 </div>
 </section>
 <section id="results-specific-effects-olanzapine" class="slide level2">
@@ -465,13 +465,12 @@
 <section id="discussionconclusion" class="slide level2">
 <h2>Discussion/Conclusion</h2>
 <ul>
-<li class="fragment">Small sample sizes when selecting monotherapy</li>
 <li class="fragment">22 DMRs (FDR &lt; 0.05) associated with Common Effects</li>
 <li class="fragment">Significant association with epigenetic factors</li>
-<li class="fragment">Do AP mediate</li>
+<li class="fragment">Do AP mediate/ameliorate epigenetic dysregulation?</li>
 </ul>
 <div class="footer">
-
+<p>Martins Summer Seminar 2024</p>
 </div>
 </section>
 <section id="acknowledgements" class="slide level2">
