--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
 <p><img data-src="img/KDM2B_DMR.png"></p>
 </div><div class="column" style="width:40%;">
 <p><br>Represses hippocampal Wnt signalling genes (Zhang <em>et al</em>, 2023)<br><br> Crucial for neuronal development and morphogenesis <br><br></p>
-<p>Abnormal expression in SCZ &amp; BPD (Hoseth <em>et al</em>, 2018)<br><br></p>
-<p>Interacts with dopamine system, glutamate signaling, &amp; neuroinflamation (Vallée, 2022).</p>
+<p>Abnormal expression reported in SCZ &amp; BPD (Hoseth <em>et al</em>, 2018)<br><br></p>
+<p>Interact with dopamine system, glutamate signaling, &amp; neuroinflamation (Vallée, 2022).</p>
 </div>
 </div>
 <div class="footer">
@@ -463,7 +463,7 @@
 </div>
 </section>
 <section id="discussionconclusion" class="slide level2">
-<h2>Discussion/Conclusion</h2>
+<h2>Discussion/Conclusion <br></h2>
 <ul>
 <li class="fragment">22 DMRs (FDR &lt; 0.05) associated with Common Effects</li>
 <li class="fragment">Significant association with epigenetic factors</li>
