--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
 <p>Martens Summer Seminar 2024</p>
 </div>
 </section>
-<section id="results-common-effects-analysis-n136" class="slide level2 smaller">
-<h2>Results: Common Effects Analysis n=136</h2>
+<section id="results-dmrs---common-effects" class="slide level2 smaller">
+<h2>Results: DMRs - Common Effects</h2>
 <div class="columns">
 <div class="column" style="width:70%;">
 <p><img data-src="img/CommonEffectsDMRsb.png" width="600"></p>
@@ -390,8 +390,8 @@
 </div>
 </div>
 </section>
-<section id="results-specific-effects-analysis-n263" class="slide level2">
-<h2>Results: Specific Effects Analysis n=263 <br><br></h2>
+<section id="results-dmrs---specific-effects" class="slide level2">
+<h2>Results: DMRs - Specific Effects <br><br></h2>
 
 <img data-src="img/SpecificDMRs.png" class="r-stretch"></section>
 <section id="database-investigation-of-dmr-genes" class="slide level2">
