--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
 <h2>Discussion/Conclusion <br></h2>
 <ul>
 <li class="fragment">22 DMRs (FDR &lt; 0.05) associated with Common Effects</li>
-<li class="fragment">Significant association with epigenetic factors</li>
-<li class="fragment">Do AP mediate/ameliorate epigenetic dysregulation?</li>
+<li class="fragment">Significant association with epigenetic factors <br> e.g.&nbsp;HMT, HAT, kinases</li>
+<li class="fragment">AP may ameliorate epigenetic dysregulation by interacting with other epigenetic factors.</li>
 </ul>
 <div class="footer">
 <p>Martins Summer Seminar 2024</p>
