--- a/index.html
+++ b/index.html
@@ -394,24 +394,42 @@
 <h2>Results: DMRs - Specific Effects <br><br></h2>
 
 <img data-src="img/SpecificDMRs.png" class="r-stretch"></section>
-<section id="database-investigation-of-dmr-genes" class="slide level2">
-<h2>Database investigation of DMR genes<br><br></h2>
+<section id="database-investigation-of-dmr-genes" class="slide level2 smaller">
+<h2>Database investigation of DMR genes</h2>
+<p>:::: columns</p>
+<div class="column" style="width:60%;">
+<p><img data-src="img/GeneTrail3.2.png"></p>
+</div>
+<div class="column" style="width:40%;">
 
-<img data-src="img/GeneTrail3.2.png" class="r-stretch"><div class="footer">
+</div>
+<div class="footer">
 <p>Martens Summer Seminar 2024</p>
 </div>
 </section>
-<section id="database-investigation-of-dmr-genes-1" class="slide level2">
-<h2>Database investigation of DMR genes <br><br></h2>
-
-<img data-src="img/SynGO.png" class="r-stretch"><div class="footer">
+<section id="database-investigation-of-dmr-genes-1" class="slide level2 smaller">
+<h2>Database investigation of DMR genes</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<p><img data-src="img/SynGO.png"></p>
+</div><div class="column" style="width:40%;">
+<p><br>Synaptic Gene Ontologies<br><br> Target of AP drug action (Trubetskoy <em>et al</em>, 2022)</p>
+</div>
+</div>
+<div class="footer">
 <p>Martens Summer Seminar 2024</p>
 </div>
 </section>
-<section id="database-investigation-of-dmr-genes-2" class="slide level2">
-<h2>Database investigation of DMR genes <br><br></h2>
-
-<img data-src="img/EpiFactors.png" class="r-stretch"><div class="footer">
+<section id="database-investigation-of-dmr-genes-2" class="slide level2 smaller">
+<h2>Database investigation of DMR genes</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="img/EpiFactors.png"></p>
+</div><div class="column" style="width:50%;">
+<p>DNAm: DNA methyltransferases, demethylases<br><br> Histone modifications: histone acetyltransferases, deacetylases, methyltransferases, demethylases<br> <br>Chromatin remodeling: SWI/SNF complexes, ISWI complexes<br> <br>Other epigenetic regulators: Polycomb/Trithorax group proteins</p>
+</div>
+</div>
+<div class="footer">
 <p>Martens Summer Seminar 2024</p>
 </div>
 </section>
