--- a/index.html
+++ b/index.html
@@ -396,12 +396,12 @@
 <img data-src="img/SpecificDMRs.png" class="r-stretch"></section>
 <section id="database-investigation-of-dmr-genes" class="slide level2 smaller">
 <h2>Database investigation of DMR genes</h2>
-<p>:::: columns</p>
+<div class="columns">
 <div class="column" style="width:60%;">
-<p><img data-src="img/GeneTrail3.2.png"></p>
+<p><img data-src="img/GeneTrail3.2.png" class="absolute" style="top: 150px; width: 600px; "></p>
+</div><div class="column" style="width:40%;">
+<p><br><br>Tools for statistical analysis of molecular signatures <br><br> Large collection of biological categories</p>
 </div>
-<div class="column" style="width:40%;">
-
 </div>
 <div class="footer">
 <p>Martens Summer Seminar 2024</p>
