--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 <div class="column" style="width:60%;">
 <p><img data-src="img/GeneTrail3.2.png" class="absolute" style="top: 150px; width: 600px; "></p>
 </div><div class="column" style="width:40%;">
-<p><br><br>Tools for statistical analysis of molecular signatures <br><br> Large collection of biological categories</p>
+<p><br><br>Tools for statistical analysis of molecular signatures <br><br> GSEA and ORA<br><br> Large collection of biological categories</p>
 </div>
 </div>
 <div class="footer">
@@ -411,9 +411,9 @@
 <h2>Database investigation of DMR genes</h2>
 <div class="columns">
 <div class="column" style="width:60%;">
-<p><img data-src="img/SynGO.png"></p>
+<p><img data-src="img/SynGO.png" class="absolute" style="top: 150px; width: 600px; "></p>
 </div><div class="column" style="width:40%;">
-<p><br>Synaptic Gene Ontologies<br><br> Target of AP drug action (Trubetskoy <em>et al</em>, 2022)</p>
+<p><br><br>Synaptic Gene Ontologies<br><br> Target of AP drug action (Trubetskoy <em>et al</em>, 2022)</p>
 </div>
 </div>
 <div class="footer">
@@ -424,9 +424,9 @@
 <h2>Database investigation of DMR genes</h2>
 <div class="columns">
 <div class="column" style="width:50%;">
-<p><img data-src="img/EpiFactors.png"></p>
+<p><img data-src="img/EpiFactors.png" class="absolute" style="top: 150px; width: 500px; "></p>
 </div><div class="column" style="width:50%;">
-<p>DNAm: DNA methyltransferases, demethylases<br><br> Histone modifications: histone acetyltransferases, deacetylases, methyltransferases, demethylases<br> <br>Chromatin remodeling: SWI/SNF complexes, ISWI complexes<br> <br>Other epigenetic regulators: Polycomb/Trithorax group proteins</p>
+<p><br> DNAm: DNA methyltransferases, demethylases<br><br> Histone modifications: histone acetyltransferases, deacetylases, methyltransferases, demethylases<br> <br>Chromatin remodeling: SWI/SNF complexes, ISWI complexes<br> <br>Other epigenetic regulators: Polycomb/Trithorax group proteins</p>
 </div>
 </div>
 <div class="footer">
