--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
 <ul>
 <li class="fragment">22 DMRs (FDR &lt; 0.05) associated with Common Effects</li>
 <li class="fragment">Significant association with epigenetic factors <br> e.g.&nbsp;HMT, HAT, kinases</li>
+<li class="fragment">DMRs may be associated with altered expression of these factors</li>
 <li class="fragment">AP may ameliorate epigenetic dysregulation by interacting with other epigenetic factors.</li>
 </ul>
 <div class="footer">
