--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 <section id="aim-identification-of-treatment-effects" class="slide level2">
 <h2>Aim: Identification of treatment effects <br></h2>
 <ul>
-<li class="fragment">Olanzapine, quetiapine, risperidone</li>
+<li class="fragment">Olanzapine, Quetiapine, Risperidone</li>
 <li class="fragment">Our focus - DNA methylation (CpG or DMR level)</li>
 <li class="fragment">Characterization of epigenetic dysregulation in severe mental illness is complex.</li>
 <li class="fragment">Identification of pathways – and the timing - where alterations may have occurred is not fully characterized.</li>
